tests/ui/impl-trait/method-resolution4.next.stderr
error[E0282]: type annotations needed
  --> $DIR/method-resolution4.rs:13:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ cannot infer type

error[E0271]: type mismatch resolving `foo::{opaque#0} normalizes-to _`
  --> $DIR/method-resolution4.rs:13:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ types differ

error[E0277]: the size for values of type `impl Iterator<Item = ()>` cannot be known at compilation time
  --> $DIR/method-resolution4.rs:11:20
   |
LL | fn foo(b: bool) -> impl Iterator<Item = ()> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl Iterator<Item = ()>`
   = note: the return type of a function must have a statically known size

error[E0271]: type mismatch resolving `foo::{opaque#0} normalizes-to _`
  --> $DIR/method-resolution4.rs:16:5
   |
LL |     std::iter::empty()
   |     ^^^^^^^^^^^^^^^^^^ types differ

error[E0277]: the size for values of type `impl Iterator<Item = ()>` cannot be known at compilation time
  --> $DIR/method-resolution4.rs:13:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `impl Iterator<Item = ()>`
   = note: the return type of a function must have a statically known size

error[E0271]: type mismatch resolving `foo::{opaque#0} normalizes-to _`
  --> $DIR/method-resolution4.rs:13:9
   |
LL |         foo(false).next().unwrap();
   |         ^^^^^^^^^^ types differ
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error[E0271]: type mismatch resolving `foo::{opaque#0} normalizes-to _`
  --> $DIR/method-resolution4.rs:11:1
   |
LL | fn foo(b: bool) -> impl Iterator<Item = ()> {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ types differ

error: aborting due to 7 previous errors

Some errors have detailed explanations: E0271, E0277, E0282.
For more information about an error, try `rustc --explain E0271`.
